--- a/package.json
+++ b/package.json
@@ -32,14 +32,19 @@
     "@nestjs/typeorm": "^9.0.0",
     "@nestjs/websockets": "^9.0.7",
     "axios": "^0.27.2",
+    "base32-encode": "^2.0.0",
+    "base32-ts": "^1.0.2",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "express-session": "^1.17.3",
+    "otplib": "^12.0.1",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "passport-totp": "^0.0.2",
     "pg": "^8.7.3",
+    "qrcode": "^1.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
