--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "base32-encode": "^2.0.0",
     "base32-ts": "^1.0.2",
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "express-session": "^1.17.3",
     "otplib": "^12.0.1",
