--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "base32-ts": "^1.0.2",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "express-session": "^1.17.3",
     "otplib": "^12.0.1",
@@ -51,7 +53,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "sqlite3": "^5.0.11",
-    "typeorm": "^0.3.7"
+    "typeorm": "^0.3.7",
+    "uuid-validate": "^0.0.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -66,6 +69,7 @@
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
+    "@types/uuid-validate": "^0.0.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
